# UtoAudio

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  prompt.md
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/desktop/scripts/: build-amll-parsers.mjs
apps/desktop/src/: App.svelte  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Icon.svelte  Logo.svelte
apps/desktop/src/components/lyrics/: FluidBackground.svelte  LyricLine.svelte  LyricPlayer.svelte  anim.ts  color.ts  controller.ts  index.ts  spring.ts  styles.css  types.ts
apps/desktop/src/lib/: file-browser.ts  m3u8.ts  playback.svelte.ts  store.svelte.ts
apps/desktop/src/lib/fonts/: source-han-sans.css
apps/desktop/src/lib/liquid-glass/: index.ts
apps/desktop/src/lib/lyric-parser/: index.ts
apps/desktop/src/lib/types/: lyrics.ts
apps/desktop/src/pages/: Library.svelte  NowPlaying.svelte  Playlist.svelte  Settings.svelte
crates/audio-core/: Cargo.toml
crates/audio-core/src/: lib.rs  tauri_api.rs
crates/audio-ffi/: Cargo.toml
crates/audio-ffi/src/: lib.rs  library.rs  lyrics.rs  playlist.rs  settings.rs
prompts/: prompt.md  prompt_1.md  prompt_2.md  prompt_22.md  prompt_23.md  prompt_24.md  prompt_25.md  prompt_3.md  prompt_4.md  prompt_5.md  prompt_6.md  prompt_7.md  prompt_8.md  prompt_9.md
scripts/: sync-submodules.sh
skills/: SKILL.md
skills/references/: patterns.md  templates.md
